fixed where the main content had a huge gap in the middle between top nav and projects

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap');
 
+:root {
+    --blueish: #9fcde1;
+}
+
 * {
     box-sizing: border-box;
     list-style: none;
@@ -8,9 +12,7 @@
     font-family: 'Noto Sans', sans-serif;
 }
 
-.side-nav,
-.cards,
-body {
+.cards{
     border: 1px solid black;
 }
 
@@ -52,6 +54,7 @@ Side Navbar
     flex-direction: column;
     background-color: #363740;
     color: #a4a6b3;
+    font-size: 15px;
 }
 
 .side-nav ul {
@@ -75,8 +78,8 @@ Side Navbar
 
 .side-nav li:hover {
     background-color: #3e4049;
-    color: #9fcde1;
-    border-left: #9fcde1 solid 4px;
+    color: var(--blueish);
+    border-left: var(--blueish) solid 4px;
     cursor: pointer;
 }
 
@@ -95,12 +98,8 @@ Header
 **/
 
 .header {
-    padding: 1rem;
     display: grid;
     grid-template-columns: 1fr 320px;
-    height: 5rem;
-    margin-top: .5rem;
-    justify-content: space-around;
 }
 
 .header h1 {
@@ -112,10 +111,10 @@ Header
 }
 
 .icons {
-    border-right: 2px solid #dfe0eb;
+    border-right: 2px solid var(--blueish);
     display: flex;
     justify-content: space-between;
-    padding-right: 1rem;
+    padding-right: 1.5rem;
 }
 
 .user {
@@ -125,6 +124,22 @@ Header
     gap: 20px;
 }
 
+/**
+
+Project Cards
+
+**/
+
 .main {
-    grid-column-start: 2;
+    padding: 1rem;
 }
+
+.projects {
+    display: grid;
+    gap: 20px;
+}
+
+.projects h2 {
+    font-weight: 400;
+}
+
